--- a/.github/workflows/built-in_FriendsSpot.yml
+++ b/.github/workflows/built-in_FriendsSpot.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Python app to Azure Web App - FriendsSpot
+name: Build and deploy ASP.Net Core app to Azure Web App - FriendsSpot
 
 on:
   push:
@@ -10,30 +10,47 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python version
-      uses: actions/setup-python@v1
+    - name: Set up .NET Core
+      uses: actions/setup-dotnet@v1
       with:
-        python-version: '3.6'
+        dotnet-version: '5.0.x'
 
-    - name: Install Python dependencies
-      run: |
-        python -m venv env
-        .\env\Scripts\activate
-        pip install -r requirements.txt
+    - name: Build with dotnet
+      run: dotnet build --configuration Release
 
-    - name: Zip the application files
-      run: Compress-Archive .\* app.zip
+    - name: dotnet publish
+      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-    - name: 'Deploy to Azure Web App'
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v2
+      with:
+        name: .net-app
+        path: ${{env.DOTNET_ROOT}}/myapp
+
+  deploy:
+    runs-on: windows-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v2
+      with:
+        name: .net-app
+
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'FriendsSpot'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_d30f7190bb3d4a5ca97ee4b9bd69d519 }}
-        package: '.\app.zip'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_29b553812bad49e7b8e7b1c98a542dd5 }}
+        package: .
